--- a/index.html
+++ b/index.html
@@ -10,30 +10,37 @@
 <body>
     <div class="center">
         <div class="name">
-            <h1>Name</h1>
+            <h3>Name</h3>
             <p class="text">Aron Resty B. Ramillano</p>
         </div>
         <div class="nickname">
-            <h2>Nickname</h2>
+            <h3>Nickname</h3>
             <p class="text">Resty</p>
         </div>
         <div class="cmsc-subject">
-            <h2>Favourite CMSC Subject so far</h2>
+            <h3>Favourite CMSC Subject so far</h3>
             <p class="text">CMSC 22</p>
         </div>
         <div class="ge">
-            <h2>Favourite GE so far and why</h2>
+            <h3>Favourite GE so far and why</h3>
             <p class="text">ETHICS 1</p>
         </div>
         <div class="prog-lang">
-            <h2>Favourite programming language so far</h2>
+            <h3>Favourite programming language so far</h3>
             <p class="text">JAVA</p>
         </div>
         <div class="food">
-            <h2>Favourite food</h2>
+            <h3>Favourite food</h3>
             <p class="text">Krispy Kreme DONUTS</p>
         </div>
+        <div class="hobby">
+            <h3>Hobbies: </h3>
+            <p class="text">Sound Mastering, Audio, Keyboards, Biking</p>
+        </div>
+        <div class="child-dream">
+            <h3>Childhood Dream:</h3>
+            <p class="text">To be honest, to be come a mechcanical engineer just like my dad, then I passed in UPLB BSCS, so I took the opportunity, and here I am! </p>
+        </div>
     </div>
-    
 </body>
 </html>
